@@ -119,3 +119,4 @@
 - Added support for browser process handling of ProcessMessages.
 - Preparing message handling on lua side.
 - Adding implementation for post message from javascript.
+- Added initial implementation for bi directional message handling system.
